[tool.poetry]
name = "llt"
version = "0.1.0"
description = ""
authors = ["charlieolinsky <charlesolinsky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
locust = "^2.31.8"
fastapi = {extras = ["standard"], version = "^0.115.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
